# asr_benchmark

./: .gitignore  README.md  pyproject.toml
artifacts/results/: asr_eval_2026-05-31.jsonl
reports/: asr_model_evaluation_2026-05-31.md
src/asr_benchmark/: __init__.py  cli.py
